apps/bulwark/service-bulwark.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bulwark
  name: bulwark
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: bulwark
