apps/bulwark/ingress-bulwark.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bulwark
spec:
  ingressClassName: cilium
  rules:
  - host: webmail.almothana.sa
    http:
      paths:
      - backend:
          service:
            name: bulwark
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - webmail.almothana.sa
      secretName: almothana-sa-tls
